--- a/src/app/shared/locales/es.json
+++ b/src/app/shared/locales/es.json
@@ -1,3 +1,12 @@
 {
-  "appname": "Portal de servicios UM"
+  "appname": "Portal de servicios UM",
+  "weblink": "Enlace web",
+  "markRead": "Marcar como leída",
+  "markAllRead": "Marcar todas como leídas",
+  "showNots": "Mostrar notificaciones",
+  "noNots": "No hay nuevas notificaciones",
+  "logout": "Salir",
+  "home": "Mi campus",
+  "Not Found": "Ruta no encontrada",
+  "Unauthorized": "No tiene acceso para solicitar este servicio"
 }
